--- a/less/banner.less
+++ b/less/banner.less
@@ -1,9 +1,9 @@
 
 .page {
-    .block {
+    .article {
         background-color: @background-color;
             
-        &.banner-block, &.banner-block-mobile {
+        &.banner-article, &.banner-article-mobile {
             background-color: transparent;
             
             background-size: cover;
