--- a/less/banner.less
+++ b/less/banner.less
@@ -1,6 +1,6 @@
 
 .page {
-    .block {background-color: transparent}
+    .block {background-color: transparent !important}
     .article {
         background-color: @background-color;
             
