Added selector so .block background color only targets things with article-backgrounds in. Removed !important.

--- a/less/banner.less
+++ b/less/banner.less
@@ -1,6 +1,11 @@
 
 .page {
-    .block {background-color: transparent !important}
+    .article-background-article {
+          .block {
+            background-color: transparent;
+          }
+    }
+
     .article {
         background-color: @background-color;
             
